--- a/style.css
+++ b/style.css
@@ -343,6 +343,21 @@ footer {
 /* ----------------------------------------------------- */
 
 @media (min-width: 800px) {
+  .open-nav,
+  .close-nav {
+    display: none;
+  }
+  .header__nav {
+    display: block;
+  }
+  .header__list {
+    display: flex;
+    list-style: none;
+  }
+  .header__list__item {
+    padding: 0 0 0 2em;
+  }
+
   .container {
     max-width: 790px;
     margin: 0 auto;
