--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ section {
 }
 
 .nav-link {
-  color: #fff;
+  color: #333333;
   text-decoration: none;
   font-size: 3rem;
   font-weight: 700;
@@ -203,6 +203,11 @@ section {
   width: 100%;
 }
 
+.services__specialization:hover {
+  border-radius: 0.7em;
+  box-shadow: -6px 0px 36px -3px rgba(185, 184, 184, 0.75);
+}
+
 .services-icon {
   font-size: 4rem;
 }
@@ -239,12 +244,6 @@ section {
   color: #828282;
   font-size: 1.125rem;
   font-weight: 500;
-}
-
-.frontend-specialization {
-  border-radius: 0.7em;
-
-  box-shadow: -6px 0px 36px -3px rgba(185, 184, 184, 0.75);
 }
 
 .action-btn {
@@ -376,6 +375,15 @@ footer {
   line-height: 2.25;
 }
 
+.nav-link-footer {
+  color: #ffffff;
+}
+
+.nav-link-footer:hover,
+.nav-link-footer:focus {
+  color: #828282;
+}
+
 .footer__socials {
   margin-bottom: 4em;
 }
@@ -396,6 +404,11 @@ footer {
 }
 .footer__social-link {
   color: #f2f2f2;
+}
+
+.footer__social-link:hover,
+.footer__social-link:focus {
+  color: #828282;
 }
 
 .fab {
@@ -478,19 +491,19 @@ footer {
   }
 
   .form-area-label {
-    font-size: 0.5rem;
+    font-size: 0.6rem;
     margin-bottom: 1.2em;
   }
 
   #email1,
   #email2 {
-    font-size: 0.6rem;
+    font-size: 1rem;
     padding: 0.6em 1em;
   }
 
   .form__contact-btn {
     font-weight: 500;
-    font-size: 0.6rem;
+    font-size: 1rem;
     font-family: 'Poppins', sans-serif;
     color: #f2f2f2;
     background-color: #2d9cdb;
